force-app/main/default/objects/CB_Item__c/CB_Item__c.object-meta.xml
<CustomObject>
    <label>CB Item</label>
    <nameField>
        <displayFormat>CB-{0000}</displayFormat>
        <label>CB Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CB Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>