force-app/main/default/objects/CB_Item__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CB Items</relationshipLabel>
    <relationshipName>CB_Items</relationshipName>
    <type>Lookup</type>
</CustomField>