force-app/main/default/objects/CB_Item__c/fields/CB_Item_Type__c.field-meta.xml
<CustomField>
    <fullName>CB_Item_Type__c</fullName>
    <label>CB Item Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>